# GatewayServer

./: CMakeLists.txt  ProjectTool.sh  README.md
001_ServerLib/: CMakeLists.txt
001_ServerLib/BaseLibs/: AESCbcEncryptor.cpp  AppUtility.cpp  AppUtility.hpp  BacktraceInfo.cpp  BacktraceInfo.hpp  Base64.cpp  BiDirQueue.cpp  CacheStatistic.cpp  CodeQueue.cpp  CodeQueueManager.cpp  CommonDef.hpp  DBClientWrapper.cpp  DecodeStream.cpp  EncodeStream.cpp  FileUtility.cpp  FixedCache.hpp  FixedHashCache.hpp  HashMap_K32.cpp  HashMap_K64.cpp  HashMap_KStringV32.cpp  HashUtility.cpp  LRUHashCache.hpp  LineConfig.cpp  LogAdapter.cpp  LogAdapter.hpp  LogFile.cpp  MathUtility.cpp  MathUtility.hpp  MsgOverViewStatistic.cpp  MsgStatistic.cpp  NowTime.cpp  ObjAllocator.cpp  ObjIdxList.cpp  ObjStatistic.cpp  PasswordEncryptionUtility.cpp  PerformanceStatistic.cpp  Random.cpp  Random.hpp  SectionConfig.cpp  SessionKeyUtility.cpp  (+27 more)
014_GatewayServer/: CMakeLists.txt  CodeQueue.hpp  CodeQueueAssemble.hpp  ConfigDefine.hpp  IOHandler.cpp  IOHandler.hpp  IntegerHash.hpp  LotusListener.hpp  LotusLogAdapter.cpp  LotusLogEngine.hpp  LotusStatistic.cpp  LotusStatistic.hpp  MainApp.cpp  MsgStatistic.cpp  SharedMemory.cpp  SignalWrapper.cpp  SignalWrapper.hpp  base.cpp  base.hpp
014_GatewayServer/conf/: LotusCodeQueue.tcm
014_GatewayServer/src/: BillWriter.cpp  BillWriter.hpp  CMakeLists.txt  CodeEngine.hpp  CodeQueue.cpp  CodeQueueAssemble.cpp  CodeQueueAssemble.hpp  ConfigAssemble.cpp  ConfigAssemble.hpp  ConfigDefine.hpp  ConfigFile.cpp  ConfigFile.hpp  EpollWrapper.hpp  ErrorDef.hpp  ExternalClientPool.hpp  FDPool.cpp  IOHandler.cpp  IOHandler.hpp  LotusConfigMng.cpp  LotusConfigMng.hpp  LotusDefine.hpp  LotusLogAdapter.cpp  LotusLogAdapter.hpp  LotusLogEngine.cpp  LotusLogEngine.hpp  LotusServer.dbg  LotusStatistic.cpp  LotusStatistic.hpp  MainApp.cpp  MsgStatistic.cpp  MsgStatistic.hpp  OverloadSafeguard.cpp  OverloadSafeguard.hpp  PreDecoder.cpp  PreDecoder.hpp  SharedMemory.cpp  SharedMemory.hpp  SignalWrapper.cpp  SignalWrapper.hpp  SingletonTemplate.hpp  (+9 more)
GatewayServer/: CodeDispatcher.cpp  CodeDispatcher.hpp  CodeEngine.cpp  CodeQueue.cpp  CodeQueueAssemble.cpp  ConfigFile.cpp  EpollWrapper.cpp  EpollWrapper.hpp  ErrorDef.hpp  ExternalClientPool.cpp  ExternalOutputThread.cpp  ExternalOutputThread.hpp  FDPool.hpp  GlobalValue.hpp  IOHandler.cpp  InternalServerPool.cpp  InternalServerPool.hpp  LotusListener.cpp  OverloadSafeguard.hpp  SectionConfig.cpp  SectionConfig.hpp  ShmObjectCreator.hpp  SocketOperator.cpp  SocketOperator.hpp  Statistic.cpp  Statistic.hpp  StringUtility.cpp  StringUtility.hpp
Projects/se/: $slksv.0  ServerFull.vpj  ServerFull.vpw  ServerFull.vpwhist
Projects/vs/BaseLibs/: GatwayServer.sln
Projects/vs/BaseLibs/BaseLibs/: BaseLibs.vcxproj  BaseLibs.vcxproj.filters
